--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
         android.defaultConfig.vectorDrawables.useSupportLibrary="true"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -50,9 +51,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'com.karumi:dexter:6.2.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
